attempt to fix scrolling on mobile

--- a/styles.scss
+++ b/styles.scss
@@ -23,6 +23,8 @@ body, html{
     width: 100%;
     height: 100%;
     overflow: hidden;
+    overflow-x: hidden; /* hide horizontal scroll */
+    overflow-y: auto;   /* enable vertical scroll */
 }
 
 .propic{
@@ -183,7 +185,7 @@ p {
     transform: scale(1.05) translate(0px, 5px);
     transition: transform 5s ease-in-out;
   }
-  
+
 #fullpage {
     position: relative;
     z-index: 2; /* Ensure the fullpage content is above particleCanvas and hoverCanvas */
